# meta-qaoa

./: Makefile  README.md  pyproject.toml
configs/: default.yaml
meta_qaoa/: __init__.py  classical.py  cli.py  config.py  eval.py  instances.py  meta_map.py  optim.py  plotting.py  qaoa.py
tests/: test_basic.py
